# WordTex

./: .gitignore  Makefile  README.md  docker-compose.yml  plan.md  wordTex.sln
.github/workflows/: ci.yaml  visual-regression.yaml
docker/: api-gateway.Dockerfile  latex-engine.Dockerfile  math-pipeline.Dockerfile  ooxml-engine.Dockerfile  orchestrator.Dockerfile  sir-core.Dockerfile  web-ui.Dockerfile
k8s/base/: api-gateway.yaml  kustomization.yaml  namespace.yaml  networking.yaml  services.yaml  sir-core.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
proto/: buf.gen.yaml
proto/service/v1/: service.proto
proto/sir/v1/: sir.proto
proto/wordtex/v1/: conversion.proto
security/: SECURITY.md  clamav.yaml  gvisor-runtime.yaml  seccomp-latex.json
services/api-gateway/: go.mod  go.sum
services/api-gateway/cmd/server/: main.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/handler/: conversion.go  health.go  templates.go
services/api-gateway/internal/middleware/: middleware.go
services/api-gateway/internal/queue/: publisher.go
services/latex-engine/: Cargo.toml
services/latex-engine/src/: cache.rs  compiler.rs  config.rs  main.rs  sandbox.rs  service.rs
services/math-pipeline/: Cargo.toml
services/math-pipeline/src/: config.rs  latex_to_mathml.rs  lib.rs  main.rs  mathml_to_latex.rs  mathml_to_omml.rs  omml_to_mathml.rs  pipeline.rs  symbols.rs
services/ooxml-engine/: OoxmlEngine.csproj  Program.cs
services/ooxml-engine/Services/: DocumentService.cs  MathService.cs  OoxmlGrpcService.cs  StyleService.cs
services/orchestrator/: go.mod  go.sum
services/orchestrator/cmd/server/: main.go
services/orchestrator/internal/config/: config.go
services/orchestrator/internal/engine/: latex_compiler.go  latex_to_docx.go  latex_to_ooxml.go  orchestrator.go
services/orchestrator/internal/store/: redis.go
services/sir-core/: Cargo.toml
services/sir-core/benches/: sir_transform.rs
services/sir-core/src/: anchor.rs  config.rs  diff.rs  error.rs  health.rs  lib.rs  main.rs  service.rs
services/sir-core/src/model/: document.rs  math.rs  metadata.rs  mod.rs  style.rs  table.rs  types.rs
services/sir-core/src/transform/: latex_to_sir.rs  mod.rs  ooxml_to_sir.rs  sir_to_latex.rs  sir_to_ooxml.rs
services/web-ui/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
services/web-ui/src/: middleware.ts
services/web-ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
services/web-ui/src/components/: job-poller.tsx
services/web-ui/src/lib/: api.ts  auth.ts  hooks.ts  latex-to-html.ts  stores.ts  types.ts  utils.ts
tests/fixtures/latex/: ieee_conference.tex  math_stress.tex
(+23 files in other folders)
