[package]
name = "latex-engine"
version = "0.1.0"
edition = "2021"
description = "LaTeX compilation and macro expansion engine for WordTex"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
