[package]
name = "math-pipeline"
version = "0.1.0"
edition = "2021"
description = "LaTeX ↔ MathML ↔ OMML math conversion pipeline for WordTex"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"
regex = "1"
unicode-segmentation = "1"

[dev-dependencies]
tokio-test = "0.4"
